fixed the navbad column alignment issue using Bootstrap Grid system, but still don't have a great handle on the grid system concept.  Added sticky footer, but still need the center text.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+* {
+margin: 0;
+}
 body {
     /*using same backgroud image as in Wk 1 homework*/ 
     background-image: url(superhornets.jpg);
@@ -21,23 +24,19 @@ header {
     width: 960px;
 }
 
-.navbar-text {
-    width: inherit;
-   
+#navbarText {
+    float: right;
 }
 
 .navbar-brand {
     background-color: teal;
-    padding: 2px;
     padding-left: 22px;
     padding-right: 22px;
     color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif; 
     font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0px;
-
+    margin: 0;
+    margin-right: 0;
 }
 
 .content {
@@ -69,17 +68,33 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
     color: #ffffff;
+}
 
+.col-md-3 {
+    margin-left: 0;
+    text-align: left;
 }
 
 .btn {
     background-color: teal;
     color: #ffffff;
+    margin-bottom: 20px;
 
 }
 
 .row {
     background-color: #ffffff;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #333;
+    border-top: 5px solid teal;
+    text-align: center;
+    margin: 0;
 }
 
 
